resources/demopage/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pagedemo
  labels:
    example.com/cert-sync: "true"
    jwt-secret/sync: "true"
