resources/demopage/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: secured-webserver

spec:
  selector:
    app: secured-webserver

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
