resources/demopage/ingress-secured.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: secured-webserver-secured
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: uitsmijter-forward-auth@kubernetescrd

spec:
  tls:
    - secretName: example.com
  rules:
    - host: secured.example.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: secured-webserver
                port:
                  number: 80


---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: website-redirect-https-secured
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-redirect-to-https@kubernetescrd"
spec:
  rules:
    - host: secured.example.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: secured-webserver
                port:
                  number: 80
